--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,13 @@
 ---
 ---
+@ARTICLE{JIOT2021,
+  abbr = {JIOT 2021}, 
+  author={Yan Li and Shen, Haiying and Zhao, Juanjuan Zhao and Xu, Chengzhong and Luo, Feng and Qiu, Chenxi},
+  journal={IEEE Internet of Things Journal}, 
+  title={[A+] CatCharger: Deploying In-motion Wireless Chargers in a Metropolitan Road Network via Categorization and Clustering of Vehicle Traffic}, 
+  year={2021},}
+
+
 @ARTICLE{8368309,
   abbr = {TSC 2021}, 
   author={Shen, Haiying and Qiu, Chenxi},
